# ns-dsl

./: .gitignore  CITATION.cff  FINAL_REVISION_ORDERS.md  FIRST_REVISION_ORDERS.md  Makefile  PROJECT_BUILD_RULES.md  README.md  REFERENCE_AUDIT_ORDERS.md  REPRODUCE.md  RESUME.md  REVISION_NOTES.md  fulltext.txt  pyproject.toml
.github/workflows/: ci.yml
bench/: __init__.py  docker_latency.py  latency_bench.py  peer_server.py  throughput_bench.py  wan_latency.py
config/: calibration.json
data/: README.md
data/online_retail_ii/: download.sh
docker/: Dockerfile.service  docker-compose.wan.yml  docker-compose.yml
experiments/: __init__.py  analyze_results.py  calibrate.py  calibration.py  make_figures.py  make_tables.py  metrics.py  report_headline.py  run_all.py  run_byzantine.py  run_s3_convergence.py  run_scalability.py  run_tier_b.py  tune_weights.py  workload.py
experiments/traces/: __init__.py  prep_retail.py
grammar/: JSON.g4  README.md
paper/: LOCAL_EXECUTION_PLAYBOOK.md  Q1_HANDOFF.md  REVIEW_RESPONSE_PROGRESS.md  RUNNING_JOBS.md  manuscript.fdb_latexmk  manuscript.fls  manuscript.tex  refs.bib  related_work_2026.md  related_work_scan.md  supplementary.tex  wlscirep.cls
paper/submission/: REVISION_NOTES.md  cover_letter.md  cover_letter.tex  manuscript.bbl  manuscript.tex  response_to_editor.tex  supplementary.tex
paper/tables/: headline_s1.tex  headline_s2.tex  (+1 more)
tests/: test_baselines.py  test_bench.py  test_bus_and_store.py  test_byzantine.py  test_consensus.py  test_dsl_parse.py  test_encode.py  test_experiment_pipeline.py  test_neutro_operators.py  test_neutro_score.py  test_neutro_svnn.py  test_optim_tuning.py  test_oracle.py  test_replay_catchup.py  test_rules_engine.py  test_scenario_s1_pricing.py
(+62 files in other folders)
